update text content

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Finger Lakes Region SUD Treatment – Bed Finder</title>
+	<title>North Country SUD Treatment – Bed Finder</title>
 	<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
 	<meta http-equiv="Pragma" content="no-cache" />
 	<meta http-equiv="Expires" content="0" />
@@ -23,10 +23,10 @@
 	</script>
 
 	<script>
-		
+
 	</script>
- 
-	 
+
+
 	<script id="item-template-desk" type="text/x-handlebars-template">
 		{{#each this as |organization|}}
 			<tr class="bed">
@@ -81,11 +81,11 @@
 	<div class="background-shadow"></div>
 		<div class="container container--bed animate">
 			<div class="title-block">
-	  			<h1 class="title-block__header">Finger Lakes Region SUD Treatment <br class="title-block__break">Bed Finder</h1>
+	  			<h1 class="title-block__header">North Country SUD Treatment<br class="title-block__break">Bed Finder</h1>
 	  			<div class="title-block__desc">
-	  				<p>The following information is provided through the collaboration of the Finger Lakes Regional Planning Consortium and Rochester Regional Health. While participating providers strive to keep this information current and update it several times per day, the reporting of open beds on this web page is not a guarantee of access. Admittance is dependent on multiple factors, including the level of care determined by the LOCADTR assessment tool.</p>
+	  				<p>The following information is provided through the collaboration of the North Country and Tug Hill Regional Planning Consortiums and North Country Behavioral Healthcare Network. While participating providers strive to keep this information current and update it several times per day, the reporting of open beds on this web page is NOT a guarantee of access. Admittance is dependent on multiple factors, including the level of care determined by the LOCADTR assessment tool.</p>
 	  					<p>View the <span class="is-bold">Glossary</span> below for more detailed information regarding definitions and the categories of treatment.</p>
-	  				<p class="alert"><span class="is-bold">Finger Lakes Region Counties:</span> Chemung, Livingston, Monroe, Ontario, Schuyler, Seneca, Steuben, Wayne, Yates.</p>
+	  				<p class="alert"><span class="is-bold">North Country Region Counties:</span> Chemung, Livingston, Monroe, Ontario, Schuyler, Seneca, Steuben, Wayne, Yates.</p>
 	  			</div>
 			</div>
 	  		<button role="button" class="btn btn--primary" data-modal="#GlossaryModal">Glossary of Terms <i class="fas fa-bars"></i></button>
@@ -94,7 +94,7 @@
 	  		<div class="search-box">
 	  			<input id="bed-table-search" type="text" placeholder="Search...">
 	  		</div>
-			
+
 			<table id="bed-table-sort" class="bed-table animate tablesorter">
 			    <thead>
 			    	<tr class="bed-table__header">
@@ -117,13 +117,13 @@
 				<tbody id="items-desk">
 				</tbody>
 			</table>
-			
+
 			<div id="items-mobile" class="animate">
 			</div>
 			<div class="loading">
 				<img src="media/loading-animation2.gif" alt="loading ellipsis animated dots">
 			</div>
-			
+
 		</div>
 
 		<footer class="rrh-footer animate">
@@ -139,7 +139,7 @@
 					<li><a target="_blank" href="https://www.rochesterregional.org/contact" rel="noopener noreferrer">Contact</a></li>
 					<li><a target="_blank" href="https://careers.rochesterregional.org" rel="noopener noreferrer">Careers</a></li>
 					<li><a href="https://www.rochesterregional.org#emailsignup" rel="noopener noreferrer">Sign Up for Our Emails</a></li>
-				</ul>	
+				</ul>
 			</div>
 		</footer>
 
@@ -158,12 +158,13 @@
 					<dt class="glossary__term">Bed Type</dt>
 					<dd class="glossary__desc">These numeric classifications identify the OASAS licensed category of the bed. For detailed information regarding the specific levels of care, refer to OASAS <a href="https://oasas.ny.gov/treatment/types" target="_blank">Types of Treatment.</a></dd>
 
-					<dt class="glossary__term">Finger Lakes Region</dt>
+					<dt class="glossary__term">North Country Region</dt>
 					<dd class="glossary__desc"><p>The geographic region represented in this website includes the following counties:<br>
 						<span>Chemung, Livingston, Monroe, Ontario, Schuyler, Seneca, Steuben, Wayne, Yates</span></p>
-						<p>All detox, inpatient rehab and 820 stabilization and rehabilitation providers in the above counties provide information on this web page, except for the following: Dick Van Dyke ATC and John L. Norris ATC</p>
 
-						<p>Similar programs are also available in adjacent counties: Genesee, Tompkins. <a href="https://findaddictiontreatment.ny.gov/" target="_blank">Find these and other NYS programs</a></p>
+          <p>All detox, inpatient rehab and 820 stabilization and rehabilitation providers in the above counties provide information on this web page, except for the following: <b>ANY EXCEPTION COUNTIES HERE</b></p>
+
+						<p>Similar programs are also available in adjacent counties: <b>ANY ADJACENT COUNTIES HERE</b>. <a href="https://findaddictiontreatment.ny.gov/" target="_blank">Find these and other NYS programs</a></p>
 					</dd>
 
 					<dt class="glossary__term">LOCADTR</dt>
@@ -171,7 +172,7 @@
 
 					<dt class="glossary__term">Other Levels of Care</dt>
 					<dd class="glossary__desc">This web page includes only inpatient, detox and 820 residential stabilization and rehabilitation resources. Many people are assisted in their recovery in less intensive settings. Refer to OASAS <a href="https://oasas.ny.gov/treatment/types" target="_blank">Types of Treatment</a> for detailed description and <a href="https://webapps.oasas.ny.gov/providerDirectory/index.cfm?search_type=2" target="_blank">Find a Provider</a>
-				        
+
 				        <p><span class="is-bold">Medication-Assisted Treatment (MAT)</span> is the use of medications, in combination with counseling and behavioral therapies, to provide a whole-patient approach to the treatment of substance use disorders. Research shows that when treating substance use disorders, a combination of medication and behavioral therapies is most successful. It is not necessary to be in an inpatient or detox level of care to receive MAT.</p>
 			        </dd>
 					</div>
