--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 	  			</div>
 			</div>
 	  		<button role="button" class="btn btn--primary" data-modal="#GlossaryModal">Glossary of Terms <i class="fas fa-bars"></i></button>
-	  		<!-- <a class="btn btn--primary" href="https://www.surveymonkey.com/r/GSL6TV7" target="_blank">Feedback <i class="fas fa-comment"></i></a> -->
+	  		<a class="btn btn--primary" href="https://www.surveymonkey.com/r/PJTFTFB" target="_blank">Feedback <i class="fas fa-comment"></i></a>
 
 	  		<div class="search-box">
 	  			<input id="bed-table-search" type="text" placeholder="Search...">
