update footer styles

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 	<div class="background-shadow"></div>
 		<div class="container container--bed animate">
 			<div class="title-block">
-	  			<h1 class="title-block__header">North Country SUD Treatment<br class="title-block__break">Bed Finder</h1>
+	  			<h1 class="title-block__header">North Country SUD Treatment <br class="title-block__break">Bed Finder</h1>
 	  			<div class="title-block__desc">
 	  				<p>The following information is provided through the collaboration of the North Country and Tug Hill Regional Planning Consortiums and North Country Behavioral Healthcare Network. While participating providers strive to keep this information current and update it several times per day, the reporting of open beds on this web page is NOT a guarantee of access. Admittance is dependent on multiple factors, including the level of care determined by the LOCADTR assessment tool.</p>
 	  					<p>View the <span class="is-bold">Glossary</span> below for more detailed information regarding definitions and the categories of treatment.</p>
@@ -126,21 +126,23 @@
 
 		</div>
 
-		<div class="rrh-footer">
+		<div class="rrh-footer" style="margin-bottom: 40px;">
 			<div class="rrh-footer__logo" style="max-width: 300px;">
         <b>
           <a style="text-decoration: none;" href="https://www.behaviorhealthnet.org" target="_blank">North Country Behavioral Healthcare Network & Management Services </a>
         </b>
 			</div>
-			<div class="rrh-footer__logo">
+			<div class="rrh-footer__logo" style="bottom: 8px;">
 				<a href="http://www.clmhd.org/rpc/" target="_blank"><img class="rpc-logo" src="media/RPC-logo.jpg" alt="RPC Logo"></a>
 			</div>
-			<div class="rrh-footer__copyright"><small>Copyright <span id="currentYear"></span>. Rochester Regional Health. All Rights Reserved.</small></div>
+      <!-- <div class="rrh-footer__copyright"><small>Copyright <span id="currentYear"></span>. Rochester Regional Health. All Rights Reserved.</small></div> -->
 
-			<ul class="rrh-footer__links">
-				<li><a href="https://www.behaviorhealthnet.org" target="_blank">Disclaimer</a></li>
-				<li><a href="https://www.behaviorhealthnet.org" target="_blank">Privacy Notice</a></li>
-			</ul>
+      <!--
+        <ul class="rrh-footer__links">
+          <li><a href="https://www.behaviorhealthnet.org" target="_blank">Disclaimer</a></li>
+          <li><a href="https://www.behaviorhealthnet.org" target="_blank">Privacy Notice</a></li>
+        </ul>
+      -->
 		</div>
 
 		<div class="modal" data-modal-window  id="GlossaryModal">
