--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
 		</div>
 
-		<div class="rrh-footer" style="margin-bottom: 40px;">
+		<div class="rrh-footer" style="padding-bottom: 40px;">
 			<div class="rrh-footer__logo" style="max-width: 300px;">
         <b>
           <a style="text-decoration: none;" href="https://www.behaviorhealthnet.org" target="_blank">North Country Behavioral Healthcare Network & Management Services </a>
