implement header style change requests

--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
 <body>
 	<div class="background-shadow"></div>
 		<div class="container container--bed animate">
-			<div class="title-block">
-	  			<h1 class="title-block__header">North Country SUD Treatment <br class="title-block__break">Bed Finder</h1>
-	  			<div class="title-block__desc">
+			<div class="title-block" style="max-width: inherit;">
+	  			<h1 class="title-block__header">North Country SUD Treatment Bed Finder</h1>
+	  			<div class="title-block__desc" style="margin: 0 20px;">
 	  				<p>The following information is provided through the collaboration of the North Country and Tug Hill Regional Planning Consortiums and North Country Behavioral Healthcare Network. While participating providers strive to keep this information current and update it several times per day, the reporting of open beds on this web page is NOT a guarantee of access. Admittance is dependent on multiple factors, including the level of care determined by the LOCADTR assessment tool.</p>
 	  					<p>View the <span class="is-bold">Glossary</span> below for more detailed information regarding definitions and the categories of treatment.</p>
 	  				<p class="alert"><span class="is-bold">North Country Region Counties:</span> Chemung, Livingston, Monroe, Ontario, Schuyler, Seneca, Steuben, Wayne, Yates.</p>
