implement header style change requests

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 	</script>
 
 	<script>
-		
+
 	</script>
- 
-	 
+
+
 	<script id="item-template-desk" type="text/x-handlebars-template">
 		{{#each this as |organization|}}
 			<tr class="bed">
@@ -80,9 +80,9 @@
 <body>
 	<div class="background-shadow"></div>
 		<div class="container container--bed animate">
-			<div class="title-block">
-	  			<h1 class="title-block__header">Finger Lakes Region SUD Treatment <br class="title-block__break">Bed Finder</h1>
-	  			<div class="title-block__desc">
+			<div class="title-block" style="max-width: inherit;">
+	  			<h1 class="title-block__header">Finger Lakes Region SUD Treatment Bed Finder</h1>
+	  			<div class="title-block__desc" style="margin: 0 20px;">
 	  				<p>The following information is provided through the collaboration of the Finger Lakes Regional Planning Consortium and Rochester Regional Health. While participating providers strive to keep this information current and update it several times per day, the reporting of open beds on this web page is not a guarantee of access. Admittance is dependent on multiple factors, including the level of care determined by the LOCADTR assessment tool.</p>
 	  					<p>View the <span class="is-bold">Glossary</span> below for more detailed information regarding definitions and the categories of treatment.</p>
 	  				<p class="alert"><span class="is-bold">Finger Lakes Region Counties:</span> Chemung, Livingston, Monroe, Ontario, Schuyler, Seneca, Steuben, Wayne, Yates.</p>
@@ -94,7 +94,7 @@
 	  		<div class="search-box">
 	  			<input id="bed-table-search" type="text" placeholder="Search...">
 	  		</div>
-			
+
 			<table id="bed-table-sort" class="bed-table animate tablesorter">
 			    <thead>
 			    	<tr class="bed-table__header">
@@ -117,13 +117,13 @@
 				<tbody id="items-desk">
 				</tbody>
 			</table>
-			
+
 			<div id="items-mobile" class="animate">
 			</div>
 			<div class="loading">
 				<img src="media/loading-animation2.gif" alt="loading ellipsis animated dots">
 			</div>
-			
+
 		</div>
 
 		<div class="rrh-footer">
@@ -137,7 +137,7 @@
 
 			<ul class="rrh-footer__links">
 				<li><a href="https://www.rochesterregional.org/disclaimer" target="_blank">Disclaimer</a></li>
-				<li><a href="https://www.rochesterregional.org/privacy-notice" target="_blank">Privacy Notice</a></li>			
+				<li><a href="https://www.rochesterregional.org/privacy-notice" target="_blank">Privacy Notice</a></li>
 			</ul>
 		</div>
 
@@ -169,7 +169,7 @@
 
 					<dt class="glossary__term">Other Levels of Care</dt>
 					<dd class="glossary__desc">This web page includes only inpatient, detox and 820 residential stabilization and rehabilitation resources. Many people are assisted in their recovery in less intensive settings. Refer to OASAS <a href="https://oasas.ny.gov/treatment/types" target="_blank">Types of Treatment</a> for detailed description and <a href="https://webapps.oasas.ny.gov/providerDirectory/index.cfm?search_type=2" target="_blank">Find a Provider</a>
-				        
+
 				        <p><span class="is-bold">Medication-Assisted Treatment (MAT)</span> is the use of medications, in combination with counseling and behavioral therapies, to provide a whole-patient approach to the treatment of substance use disorders. Research shows that when treating substance use disorders, a combination of medication and behavioral therapies is most successful. It is not necessary to be in an inpatient or detox level of care to receive MAT.</p>
 			        </dd>
 					</div>
