make table header sticky

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 			<table id="bed-table-sort" class="bed-table animate tablesorter">
 			    <thead>
-			    	<tr class="bed-table__header">
+			    	<tr class="bed-table__header sticky">
 				        <th colspan="3"> </th>
 				        <th colspan="2" class="bed-table__open">OPEN BEDS</th>
 				        <th colspan="2" class="bed-table__hold">ON HOLD</th>
