--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 	  			<div class="title-block__desc" style="margin: 0 20px;">
 	  				<p>The following information is provided through the collaboration of the North Country and Tug Hill Regional Planning Consortiums and North Country Behavioral Healthcare Network. While participating providers strive to keep this information current and update it several times per day, the reporting of open beds on this web page is NOT a guarantee of access. Admittance is dependent on multiple factors, including the level of care determined by the LOCADTR assessment tool.</p>
 	  					<p>View the <span class="is-bold">Glossary</span> below for more detailed information regarding definitions and the categories of treatment.</p>
-	  				<p class="alert"><span class="is-bold">North Country Region Counties:</span> Chemung, Livingston, Monroe, Ontario, Schuyler, Seneca, Steuben, Wayne, Yates.</p>
+	  				<p class="alert"><span class="is-bold">North Country Region Counties: </span>Clinton, Franklin, Essex, Hamilton, Jefferson, Lewis and St. Lawrence.</p>
 	  			</div>
 			</div>
 	  		<button role="button" class="btn btn--primary" data-modal="#GlossaryModal">Glossary of Terms <i class="fas fa-bars"></i></button>
@@ -160,11 +160,11 @@
 
 					<dt class="glossary__term">North Country Region</dt>
 					<dd class="glossary__desc"><p>The geographic region represented in this website includes the following counties:<br>
-						<span>Chemung, Livingston, Monroe, Ontario, Schuyler, Seneca, Steuben, Wayne, Yates</span></p>
+						<span>Clinton, Franklin, Essex, Hamilton, Jefferson, Lewis and St. Lawrence.</span></p>
 
           <p>All detox, inpatient rehab and 820 stabilization and rehabilitation providers in the above counties provide information on this web page, except for the following: <b>ANY EXCEPTION COUNTIES HERE</b></p>
 
-						<p>Similar programs are also available in adjacent counties: <b>ANY ADJACENT COUNTIES HERE</b>. <a href="https://findaddictiontreatment.ny.gov/" target="_blank">Find these and other NYS programs</a></p>
+						<p>Similar programs are also available in adjacent counties</b>. <a href="https://findaddictiontreatment.ny.gov/" target="_blank">Find these and other NYS programs</a></p>
 					</dd>
 
 					<dt class="glossary__term">LOCADTR</dt>
