--- a/index.html
+++ b/index.html
@@ -140,6 +140,10 @@
 					<li><a target="_blank" href="https://careers.rochesterregional.org" rel="noopener noreferrer">Careers</a></li>
 					<li><a href="https://www.rochesterregional.org#emailsignup" rel="noopener noreferrer">Sign Up for Our Emails</a></li>
 				</ul>
+		<div class="rrh-footer" style="padding-bottom: 40px;">
+      <a href="https://www.behaviorhealthnet.org" target="_blank"><img src="media/logo.png" height="75" width="75" style="position: relative; top: 19px;"></a>
+			<div class="rrh-footer__logo" style="max-width: 300px;">
+          <a style="text-decoration: none;" href="https://www.behaviorhealthnet.org" target="_blank"><b>North Country Behavioral Healthcare Network & Management Services</b></a>
 			</div>
 		</footer>
 
